# envoy

./: .gitignore  LICENSE  README.md  Taskfile.yml  makefile  pyproject.toml
completion/: generate.sh
conda/: conda.csv  jupyterlab.csv  jupyterlab_linux-64.yml  jupyterlab_linux-ppc64le.yml  jupyterlab_osx-arm64.yml  py310_linux-64.yml  py310_linux-aarch64.yml  py310_linux-ppc64le.yml  py310_osx-64.yml  py310_osx-arm64.yml  py311_linux-64.yml  py311_linux-aarch64.yml  py311_linux-ppc64le.yml  py311_osx-64.yml  py311_osx-arm64.yml  py312_linux-64.yml  py312_linux-aarch64.yml  py312_linux-ppc64le.yml  py312_osx-64.yml  py312_osx-arm64.yml  py313_linux-64.yml  py313_linux-aarch64.yml  py313_linux-ppc64le.yml  py313_osx-64.yml  py313_osx-arm64.yml  py314_linux-64.yml  py314_linux-aarch64.yml  py314_linux-ppc64le.yml  py314_osx-64.yml  py314_osx-arm64.yml  py39_linux-64.yml  py39_linux-aarch64.yml  py39_linux-ppc64le.yml  system.csv  system_linux-64.yml  system_linux-aarch64.yml  system_linux-ppc64le.yml  system_osx-64.yml  system_osx-arm64.yml
install/: README.md  bootstrap.sh  clifton.sh  code.sh  codex.sh  gh.sh  makefile  mamba-env.sh  mamba.sh  sman.sh  system.sh  zim.sh
install/src/: compile.sh
install/src/lib/: clifton.sh  code.sh  codex.sh  gh.sh  mamba-env.sh  mamba.sh  sman.sh  zim.sh
install/src/lib/util/: git.sh  helpers.sh  ssh.sh
install/src/state/: env.sh
nix/: Taskfile.yml  flake.nix  nix_helper.py
nix/hosts/: default.nix  simple.nix
nix/modules/: common.nix  systemPackages.nix
nix/modules/darwin/: brews.nix  casks.nix  masApps.nix
src/bsos/: conda_web_api.py
src/bsos/brew/: helper.py
src/bsos/conda/: web_api.py
src/bsos/nix/: helper.py  mas.py
